# LP1-Projeto-2

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: List_8h_source.html  Music_8h_source.html  Node_8h_source.html  Playlist_8h_source.html  annotated.html  classList-members.html  classList.html  classMusic-members.html  classMusic.html  classNode-members.html  classNode.html  classPlaylist-members.html  classPlaylist.html  classes.html  dir_051bfca0d6f4e92417dab1531a199030.html  dir_16c8c26a597a490ff435edae6e73b1e4.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_df5ce36cd226e9311e0da476ff7ac761.html  dir_f832e65f699b83436d186dae4d69d023.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  index.html  menudata.js
docs/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_2.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js
docs/latex/: List_8h_source.tex  Music_8h_source.tex  Node_8h_source.tex  Playlist_8h_source.tex  classList.tex  classMusic.tex  classNode.tex  classPlaylist.tex  files.tex  refman.tex
include/: List.h  Music.h  Node.h  Playlist.h  Split.h
src/: Music.cpp  Playlist.cpp  Split.cpp  main.cpp  main_test.cpp
